--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Sinkhole to collect masked credentials",
   "main": "index.js",
   "scripts": {
+    "local": "node src/server.js",
     "server": "node server.js",
-    "docker": "docker build -t sinkhole . && docker run --rm -it -p 8443:8443 -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN sinkhole"
+    "docker": "aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 764525110978.dkr.ecr.us-west-2.amazonaws.com && docker build -t sinkhole . && docker run --rm -it -p 443:443 -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN sinkhole"
   },
   "repository": {
     "type": "git",
