--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "local": "node src/server.js",
     "server": "node server.js",
-    "docker": "aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 764525110978.dkr.ecr.us-west-2.amazonaws.com && docker build -t sinkhole . && docker run --rm -it -p 443:443 -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN sinkhole"
+    "docker": "aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 764525110978.dkr.ecr.us-west-2.amazonaws.com && docker build -t sinkhole . && docker run --rm -it -p 443:443 -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN sinkhole",
+    "test": "tartufo --verbose --pre-commit"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mystiko": "^0.2.0"
+  },
+  "devDependencies": {
+    "tartufo": "^1.1.6"
   }
 }
